# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

config("expat_config") {
  include_dirs = [
    "expat/lib",
    "expat/vms",
  ]
  defines = [ "HAVE_EXPAT_CONFIG_H" ]
}

source_set("expat") {
  public_configs = [ ":expat_config" ]
  public = [
    "expat/lib/expat.h",
  ]
  sources = [
    "expat/lib/amigaconfig.h",
    "expat/lib/ascii.h",
    "expat/lib/asciitab.h",
    "expat/lib/expat_external.h",
    "expat/lib/iasciitab.h",
    "expat/lib/internal.h",
    "expat/lib/latin1tab.h",
    "expat/lib/macconfig.h",
    "expat/lib/nametab.h",
    "expat/lib/utf8tab.h",
    "expat/lib/watcomconfig.h",
    "expat/lib/winconfig.h",
    "expat/lib/xmlparse.c",
    "expat/lib/xmlrole.c",
    "expat/lib/xmlrole.h",
    "expat/lib/xmltok.c",
    "expat/lib/xmltok.h",
    "expat/lib/xmltok_impl.c",
    "expat/lib/xmltok_impl.h",
    "expat/lib/xmltok_ns.c",
  ]
}
